--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,13 @@
               <a href="#" class="bouton"> SURVOLEZ LA MISSION </a>
             </div>
           </div>
+          <!-- forme tranversante diagonal ---------------- -->
+
+          <div class="square"></div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+          <!------------------ -->
         </div>
       </div>
     </header>
@@ -72,55 +79,27 @@
         </div>
       </div> -->
 
-      <style>
-        /* Style pour le conteneur principal */
-        .carousel-container {
-          display: flex;
-          overflow-x: auto;
-          background-color: #000;
-          padding: 20px;
-          scrollbar-width: thin; /* Pour un défilement plus fin sur Firefox */
-          scrollbar-color: #666 #333;
-        }
-
-        /* Masque les barres de défilement par défaut */
-        .carousel-container::-webkit-scrollbar {
-          height: 8px;
-        }
-        .carousel-container::-webkit-scrollbar-thumb {
-          background-color: #666;
-          border-radius: 10px;
-        }
-        .carousel-container::-webkit-scrollbar-track {
-          background-color: #333;
-        }
-
-        /* Style pour les images dans le carrousel */
-        .carousel-container img {
-          max-width: 665px;
-          margin-right: 20px;
-          height: auto;
-        }
-
-        /* Pour éviter la dernière marge droite */
-        .carousel-container img:last-child {
-          margin-right: 0;
-        }
-      </style>
-
-      <div class="carousel-container">
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 1" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 2" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 3" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 4" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 5" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 6" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 7" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 8" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 9" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 10" />
-        <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Image 11" />
+      <!-- SCROLL HORIZONTAL ---------------------------------------------------------- -->
+      <!-- 
+      <div class="firstContainer">
+        <h1>Testing horizontal scrolling w/ three sections</h1>
+        <h2>First Container</h2>
       </div>
+      <div class="container">
+        <div class="description panel blue">
+          <div>
+            SCROLL DOWN
+            <div class="scroll-down"><div class="arrow"></div></div>
+          </div>
+        </div>
+
+        <section class="panel red">ONE</section>
+        <section class="panel orange">TWO</section>
+        <section class="panel purple">THREE</section>
+      </div>
+      <div class="lastContainer">Last Container</div>
+      <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script> -->
+      <!-- ---------------------------------------------------------- -->
 
       <br />
 
@@ -808,22 +787,24 @@
                 placeholder="exemple@gmail.com"
                 required
               />
-              <a href="#" class="bouton">S'abonnez</a>
+              <a href="#" class="bouton-newsletter">S'abonnez</a>
             </div>
           </div>
           <!-- -------------- -->
 
           <div class="col-3">
-            <h3>A propos</h3>
-            <li>
-              <a href="#">Nôtre histoire</a>
-            </li>
-            <li>
-              <a href="#">Nos éditions</a>
-            </li>
-            <li>
-              <a href="#">Contact</a>
-            </li>
+            <div class="lien-propos">
+              <h3>A propos</h3>
+              <li>
+                <a href="#">Nôtre histoire</a>
+              </li>
+              <li>
+                <a href="#">Nos éditions</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+            </div>
           </div>
         </div>
       </div>
@@ -839,10 +820,11 @@
           </div>
 
           <div class="col-6">
-            <a class="lois" href="#"
-              >Conditions générales • Politique de confidentialité •
-              Impressum</a
-            >
+            <div class="box-lois">
+              <a class="lois" href="#">Conditions générales • </a>
+              <a class="lois" href="">Politique de confidentialité •</a>
+              <a class="lois" href="">Impressum</a>
+            </div>
           </div>
         </div>
       </div>
