--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,6 @@
           </div>
           <!-- forme tranversante diagonal ---------------- -->
 
-          <div class="square"></div>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
           <!------------------ -->
         </div>
       </div>
@@ -61,6 +57,8 @@
     <br />
     <!-- ------------------------- MAIN --------------------------------- -->
     <main>
+      <!-- SCROLL BD ---------------------------------------------------------- -->
+
       <!-- <div class="container">
         <div class="row">
           <div class="col-12 toute-les-images-BD">
@@ -79,26 +77,19 @@
         </div>
       </div> -->
 
-      <!-- SCROLL HORIZONTAL ---------------------------------------------------------- -->
-      <!-- 
-      <div class="firstContainer">
-        <h1>Testing horizontal scrolling w/ three sections</h1>
-        <h2>First Container</h2>
-      </div>
-      <div class="container">
-        <div class="description panel blue">
-          <div>
-            SCROLL DOWN
-            <div class="scroll-down"><div class="arrow"></div></div>
-          </div>
-        </div>
+      <!-- <div class="custom-carousel">
+        <img src="img/animation/images-BD-1.png" alt="" class="active" />
+        <img src="img/animation/images-BD-2.png" alt="" />
+        <img src="img/animation/images-BD-3.png" alt="" />
+        <img src="img/animation/images-BD-4.png" alt="" />
+        <img src="img/animation/images-BD-5.png" alt="" />
+        <img src="img/animation/images-BD-6.png" alt="" />
 
-        <section class="panel red">ONE</section>
-        <section class="panel orange">TWO</section>
-        <section class="panel purple">THREE</section>
-      </div>
-      <div class="lastContainer">Last Container</div>
-      <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script> -->
+        <div class="custom-button-container">
+          <button id="custom-next-button">Suivant</button>
+        </div>
+      </div> -->
+
       <!-- ---------------------------------------------------------- -->
 
       <br />
@@ -173,7 +164,7 @@
 
       <br />
 
-      <!-- animation commentaire ---------------------------------------------------------- -->
+      <!-- ANNIMATION COMMENTAIRE ---------------------------------------------------------- -->
 
       <div id="imageCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -551,172 +542,77 @@
 
       <!-- ---------------------------------------------------------- -->
 
-      <!-- EDITIONS LIVRES ---------------------------------------------------------- -->
+      <!-- CARROUSEL LIVRES EDITIONS ---------------------------------------------------------- -->
 
-      <div id="imageCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row">
-              <div class="col">
-                <!-- le commentaire -- 1 -->
-                <img
-                  class="livres"
-                  src="img/editions/tintin-et-les-picaros-fr.jpg?width=800"
-                  alt=""
-                />
-
-                <!-- -- 1 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 2 -->
-                <img
-                  class="livres"
-                  src="img/editions/tintin-et-l-alph-art-fr.jpg?width=800"
-                  alt=""
-                />
-                <!-- -- 2 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 3 -->
-
-                <img
-                  class="livres"
-                  src="img/editions/tintin-au-tibet-cover-fr.jpg?width=800"
-                  alt=""
-                />
-                <!-- -- 3 -->
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col">
-                <!-- le commentaire -- 4 -->
-
-                <img
-                  class="livres"
-                  src="img/editions/tintin-au-pays-des-soviets-fr_v2.jpg?width=800"
-                  alt=""
-                />
-                <!-- -- 4 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 5 -->
-                <img
-                  class="livres"
-                  src="img/editions/tintin-au-pays-de-l-or-noir-fr.jpg?width=800"
-                  alt=""
-                />
-
-                <!-- -- 5 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 6 -->
-
-                <img
-                  class="livres"
-                  src="img/editions/on-a-marche-sur-la-lune.jpg?width=800"
-                  alt=""
-                />
-
-                <!-- -- 6 -->
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col">
-                <!-- le commentaire -- 7 -->
-                <img
-                  class="livres"
-                  src="img/editions/les-cigares-du-pharaon.png?width=800"
-                  alt=""
-                />
-
-                <!-- -- 7 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 8 -->
-                <img
-                  class="livres"
-                  src="img/editions/les-bijoux-de-la-castafiore-fr.jpg?width=800"
-                  alt=""
-                />
-                <!-- -- 8 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 9 -->
-                <img
-                  class="livres"
-                  src="img/editions/les-7-boules-de-cristal-fr.jpg?width=800"
-                  alt=""
-                />
-
-                <!-- -- 9 -->
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col">
-                <!-- le commentaire -- 10 -->
-                <img
-                  class="livres"
-                  src="img/editions/le-tresor-de-rackham-le-rouge-fr.jpg?width=800"
-                  alt=""
-                />
-                <!-- -- 10 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 11 -->
-                <img
-                  class="livres"
-                  src="img/editions/le-temple-du-soleil-fr.jpg?width=800"
-                  alt=""
-                />
-
-                <!-- -- 11 -->
-              </div>
-              <div class="col">
-                <!-- le commentaire -- 12 -->
-                <img
-                  class="livres"
-                  src="img/editions/le-secret-de-la-licorne-fr.jpg?width=800"
-                  alt=""
-                />
-                <!-- -- 12 -->
-              </div>
-            </div>
-          </div>
+      <div class="carousel-container">
+        <div class="carousel" id="carousel">
+          <!-- Ajoute ici les 24 livres -->
+          <img src="img/editions/coke-en-stock-fr.jpg" alt="Livre 1" />
+          <img
+            src="img/editions/couverture-tintin-au-congo_v3.jpg"
+            alt="Livre 2"
+          />
+          <img
+            src="img/editions/couverture-tintin-en-amerique.jpg"
+            alt="Livre 3"
+          />
+          <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Livre 4" />
+          <img src="img/editions/l-etoile-mysterieuse-fr.jpg" alt="Livre 5" />
+          <img src="img/editions/l-ile-noire-fr.jpg" alt="Livre 6" />
+          <img src="img/editions/l-oreile-cassee-fr.jpg" alt="Livre 7" />
+          <img
+            src="img/editions/le-crabe-aux-pinces-d-or-fr.jpg"
+            alt="Livre 8"
+          />
+          <img src="img/editions/le-lotus-bleu-fr.jpg" alt="Livre 9" />
+          <img src="img/editions/le-sceptre-d-ottokar-fr.jpg" alt="Livre 10" />
+          <img
+            src="img/editions/le-secret-de-la-licorne-fr.jpg"
+            alt="Livre 12"
+          />
+          <img src="img/editions/le-temple-du-soleil-fr.jpg" alt="Livre 13" />
+          <img
+            src="img/editions/le-tresor-de-rackham-le-rouge-fr.jpg"
+            alt="Livre 14"
+          />
+          <img
+            src="img/editions/les-7-boules-de-cristal-fr.jpg"
+            alt="Livre 15"
+          />
+          <img
+            src="img/editions/les-bijoux-de-la-castafiore-fr.jpg"
+            alt="Livre 16"
+          />
+          <img src="img/editions/les-cigares-du-pharaon.png" alt="Livre 17" />
+          <img src="img/editions/on-a-marche-sur-la-lune.jpg" alt="Livre 18" />
+          <img
+            src="img/editions/tintin-au-pays-de-l-or-noir-fr.jpg"
+            alt="Livre 19"
+          />
+          <img
+            src="img/editions/tintin-au-pays-des-soviets-fr_v2.jpg"
+            alt="Livre 20"
+          />
+          <img src="img/editions/tintin-au-tibet-cover-fr.jpg" alt="Livre 21" />
+          <img src="img/editions/tintin-et-l-alph-art-fr.jpg" alt="Livre 22" />
+          <img src="img/editions/tintin-et-les-picaros-fr.jpg" alt="Livre 23" />
+          <!-- Ajoute jusqu'à image24.png -->
         </div>
-
-        <a
-          class="carousel-control-prev"
-          href="#imageCarousel"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Précédent</span>
-        </a>
-        <a
-          class="carousel-control-next"
-          href="#imageCarousel"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Suivant</span>
-        </a>
       </div>
 
-      <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      />
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <div class="controls">
+        <button id="prev">
+          <img
+            class="rotate"
+            src="img/icones/fleche-gauche.png?width=20"
+            alt=""
+          />
+        </button>
+        <button id="next">
+          <img src="img/icones/fleche-droite.png?width=20" alt="" />
+        </button>
+      </div>
+
       <!-- ---------------------------------------------------------- -->
 
       <br />
