fini comme on peut :)

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           </div>
           <div class="col-12">
             <div class="centrale">
-              <a href="#" class="bouton"> SURVOLEZ LA MISSION </a>
+              <a href="#section1" class="bouton"> SURVOLEZ LA MISSION </a>
             </div>
           </div>
           <!-- forme tranversante diagonal ---------------- -->
@@ -59,36 +59,43 @@
     <main>
       <!-- SCROLL BD ---------------------------------------------------------- -->
 
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-12 toute-les-images-BD">
-            <img class="images-BD" src="img/images-BD-1.png" alt="" />
-            <img class="images-BD" src="img/images-BD-2.png" alt="" />
-            <img class="images-BD" src="img/images-BD-3.png" alt="" />
-            <img class="images-BD" src="img/images-BD-4.png" alt="" />
-            <img class="images-BD" src="img/images-BD-5.png" alt="" />
-            <img class="images-BD" src="img/images-BD-6.png" alt="" />
-            <img class="images-BD" src="img/images-BD-7.png" alt="" />
-            <img class="images-BD" src="img/images-BD-8.png" alt="" />
-            <img class="images-BD" src="img/images-BD-9.png" alt="" />
-            <img class="images-BD" src="img/images-BD-10.png" alt="" />
-            <img class="images-BD" src="img/images-BD-11.png" alt="" />
+      <div id="section1" class="slider">
+        <div class="slide-track">
+          <div class="slide">
+            <img src="img/animation/images-BD-1.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-3.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-3.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-4.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-5.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-6.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-7.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-8.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-9.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-10.png" width="155" alt="" />
+          </div>
+          <div class="slide">
+            <img src="img/animation/images-BD-11.png" width="155" alt="" />
           </div>
         </div>
-      </div> -->
-
-      <!-- <div class="custom-carousel">
-        <img src="img/animation/images-BD-1.png" alt="" class="active" />
-        <img src="img/animation/images-BD-2.png" alt="" />
-        <img src="img/animation/images-BD-3.png" alt="" />
-        <img src="img/animation/images-BD-4.png" alt="" />
-        <img src="img/animation/images-BD-5.png" alt="" />
-        <img src="img/animation/images-BD-6.png" alt="" />
-
-        <div class="custom-button-container">
-          <button id="custom-next-button">Suivant</button>
-        </div>
-      </div> -->
+      </div>
 
       <!-- ---------------------------------------------------------- -->
 
@@ -544,73 +551,132 @@
 
       <!-- CARROUSEL LIVRES EDITIONS ---------------------------------------------------------- -->
 
-      <div class="carousel-container">
-        <div class="carousel" id="carousel">
-          <!-- Ajoute ici les 24 livres -->
-          <img src="img/editions/coke-en-stock-fr.jpg" alt="Livre 1" />
-          <img
-            src="img/editions/couverture-tintin-au-congo_v3.jpg"
-            alt="Livre 2"
-          />
-          <img
-            src="img/editions/couverture-tintin-en-amerique.jpg"
-            alt="Livre 3"
-          />
-          <img src="img/editions/l-affaire-tournesol-fr.jpg" alt="Livre 4" />
-          <img src="img/editions/l-etoile-mysterieuse-fr.jpg" alt="Livre 5" />
-          <img src="img/editions/l-ile-noire-fr.jpg" alt="Livre 6" />
-          <img src="img/editions/l-oreile-cassee-fr.jpg" alt="Livre 7" />
-          <img
-            src="img/editions/le-crabe-aux-pinces-d-or-fr.jpg"
-            alt="Livre 8"
-          />
-          <img src="img/editions/le-lotus-bleu-fr.jpg" alt="Livre 9" />
-          <img src="img/editions/le-sceptre-d-ottokar-fr.jpg" alt="Livre 10" />
-          <img
-            src="img/editions/le-secret-de-la-licorne-fr.jpg"
-            alt="Livre 12"
-          />
-          <img src="img/editions/le-temple-du-soleil-fr.jpg" alt="Livre 13" />
-          <img
-            src="img/editions/le-tresor-de-rackham-le-rouge-fr.jpg"
-            alt="Livre 14"
-          />
-          <img
-            src="img/editions/les-7-boules-de-cristal-fr.jpg"
-            alt="Livre 15"
-          />
-          <img
-            src="img/editions/les-bijoux-de-la-castafiore-fr.jpg"
-            alt="Livre 16"
-          />
-          <img src="img/editions/les-cigares-du-pharaon.png" alt="Livre 17" />
-          <img src="img/editions/on-a-marche-sur-la-lune.jpg" alt="Livre 18" />
-          <img
-            src="img/editions/tintin-au-pays-de-l-or-noir-fr.jpg"
-            alt="Livre 19"
-          />
-          <img
-            src="img/editions/tintin-au-pays-des-soviets-fr_v2.jpg"
-            alt="Livre 20"
-          />
-          <img src="img/editions/tintin-au-tibet-cover-fr.jpg" alt="Livre 21" />
-          <img src="img/editions/tintin-et-l-alph-art-fr.jpg" alt="Livre 22" />
-          <img src="img/editions/tintin-et-les-picaros-fr.jpg" alt="Livre 23" />
-          <!-- Ajoute jusqu'à image24.png -->
-        </div>
-      </div>
+      <!-- livre éditions carousel ---------------------------------------------------------- -->
 
-      <div class="controls">
-        <button id="prev">
-          <img
-            class="rotate"
-            src="img/icones/fleche-gauche.png?width=20"
-            alt=""
-          />
-        </button>
-        <button id="next">
-          <img src="img/icones/fleche-droite.png?width=20" alt="" />
-        </button>
+      <div class="custom-carousel">
+        <div class="custom-carousel-track">
+          <div class="custom-carousel-images">
+            <img
+              class="book"
+              src="img/editions/coke-en-stock-fr.jpg"
+              alt="Livre 1"
+            />
+            <img
+              class="book"
+              src="img/editions/couverture-tintin-au-congo_v3.jpg"
+              alt="Livre 2"
+            />
+            <img
+              class="book"
+              src="img/editions/couverture-tintin-en-amerique.jpg"
+              alt="Livre 3"
+            />
+            <img
+              class="book"
+              src="img/editions/l-affaire-tournesol-fr.jpg"
+              alt="Livre 4"
+            />
+            <img
+              class="book"
+              src="img/editions/l-etoile-mysterieuse-fr.jpg"
+              alt="Livre 5"
+            />
+
+            <img
+              class="book"
+              src="img/editions/l-ile-noire-fr.jpg"
+              alt="Livre 6"
+            />
+
+            <img
+              class="book"
+              src="img/editions/l-oreile-cassee-fr.jpg"
+              alt="Livre 7"
+            />
+
+            <img
+              class="book"
+              src="img/editions/le-crabe-aux-pinces-d-or-fr.jpg"
+              alt="Livre 8"
+            />
+
+            <img
+              class="book"
+              src="img/editions/le-lotus-bleu-fr.jpg"
+              alt="Livre 9"
+            />
+            <img
+              class="book"
+              src="img/editions/le-sceptre-d-ottokar-fr.jpg"
+              alt="Livre 10"
+            />
+            <img
+              class="book"
+              class="book"
+              src="img/editions/le-secret-de-la-licorne-fr.jpg"
+              alt="Livre 12"
+            />
+            <img
+              class="book"
+              src="img/editions/le-temple-du-soleil-fr.jpg"
+              alt="Livre 13"
+            />
+            <img
+              class="book"
+              src="img/editions/le-tresor-de-rackham-le-rouge-fr.jpg"
+              alt="Livre 14"
+            />
+            <img
+              class="book"
+              src="img/editions/les-7-boules-de-cristal-fr.jpg"
+              alt="Livre 15"
+            />
+            <img
+              class="book"
+              src="img/editions/les-bijoux-de-la-castafiore-fr.jpg"
+              alt="Livre 16"
+            />
+            <img
+              class="book"
+              src="img/editions/les-cigares-du-pharaon.png"
+              alt="Livre 17"
+            />
+            <img
+              class="book"
+              src="img/editions/on-a-marche-sur-la-lune.jpg"
+              alt="Livre 18"
+            />
+            <img
+              class="book"
+              src="img/editions/tintin-au-pays-de-l-or-noir-fr.jpg"
+              alt="Livre 19"
+            />
+            <img
+              class="book"
+              src="img/editions/tintin-au-pays-des-soviets-fr_v2.jpg"
+              alt="Livre 20"
+            />
+            <img
+              class="book"
+              src="img/editions/tintin-au-tibet-cover-fr.jpg"
+              alt="Livre 21"
+            />
+            <img
+              class="book"
+              src="img/editions/tintin-et-l-alph-art-fr.jpg"
+              alt="Livre 22"
+            />
+            <img
+              class="book"
+              src="img/editions/tintin-et-les-picaros-fr.jpg"
+              alt="Livre 23"
+            />
+          </div>
+        </div>
+        <div class="custom-carousel-controls">
+          <button id="custom-prev-button">◀</button>
+          <button id="custom-next-button">▶</button>
+        </div>
       </div>
 
       <!-- ---------------------------------------------------------- -->
